Refactor: use only raw account number in backend
