# internal/general_ledger/app/command/types.go
@@ -8,7 +8,7 @@ import (
 type JournalLineCmd struct {
 	Id                 uuid.UUID
 	Text               string
-	AccountNumber      string
+	RawAccountNumber   string
 	Amount             decimal.Decimal
 	DimensionOptionIds []uuid.UUID
 }
